<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2020 AJ Sherrell
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<resources>
    <string name="app_name">Hyperbarics Quiz</string>
    <string name="category"><u>Category:</u></string>

    <string name="sampleQuestion">This is a question?</string>
    <string name="one">Radio answer one</string>
    <string name="two">Radio answer two</string>
    <string name="three">Radio answer three</string>
    <string name="four">Radio answer four</string>
    <string name="next">Next</string>
    <string name="retry">Retry</string>
    <string name="navigation_drawer_header_content_description">Navigation drawer header logo</string>
    <string name="navigation_drawer_header_title">Quiz Menu</string>
    <string name="about">About</string>
    <string name="high_score">High Score</string>
    <string name="resources">Resources</string>

    <string name="about_text">This quiz is for medical professionals to practice to take the
        Certified Hyperbaric Tech exam.\n\n The quiz was developed by a professional who has taken,
        and passed the CHT exam.\n\n The questions have been written from the individual\'s study
        material.\n\n If you spot a discrepancy, or would like your own question considered, please
        contact the <a href="mailto:ajsherrell.ajacks@gmail.com?Subject=question" target="_top">developer</a>.</string>
    <string name="resources_text">These are links to resources to further improve knowledge of
        hyperbarics.\n\n1. <a href="https://www.nbdhmt.org/">National Board of Diving and Hyperbaric Medical
        Technology</a>.\n\n2. <a href="https://www.navsea.navy.mil/Portals/103/Documents/SUPSALV/Diving/US%20DIVING%20MANUAL_REV7.pdf?ver=2017-01-11-102354-393">Navy Dive Manual</a>.
        \n\n3. <a href="https://www.divetable.info/workshop/USN_Rev7_Tables.pdf">Navy Dive Tables</a>.
        \n\n4. <a href="https://www.mo-media.com/hyperbaric/">Study guide</a> for purchase.</string>
    <string name="high_score_text">High Scores!</string>
    <string name="list_of_categories">List of categories</string>
    <string name="name">Name</string>
    <string name="save">Save</string>
    <string name="enter_your_user_name">Enter your user name...</string>
    <string name="add_a_user">Add a user</string>
    <string name="add_user">Add User</string>
    <string name="enter_your_title">Enter your title…</string>
    <string name="score_text">Your total score for this quiz: %d%%</string>
    <string name="percent">%d%%</string>
    <string name="win">You win! \n\nYour final score is: %d%%</string>
    <string name="lose">You lose! \n\nYour final score is: %d%%</string>
    <string name="home">Home</string>
    <string name="title">Title</string>
    <string name="submit">Submit</string>
    <string name="error_message">An error occurred while loading the data</string>
    <string name="correct_answer">Correct answer is: %s.</string>
    <string name="incorrect_answer">Wrong! The correct answer is: </string>
    <string name="clear">Clear</string>
    <string name="no_scores">Take a quiz to see your scores.</string>
    <string name="no_profile">Add profile to view your scores!</string>
    <string name="zero">0</string>
    <string name="score"><u>Score:</u></string>
    <string name="separator"> <![CDATA[----->]]> </string>
    <string name="error">Error!!</string>
    <string name="ajacks">ajacks</string>
</resources>
