<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="model"
            type="com.ajsherrell.android.quiz_hyperbaric.viewModel.QuizListViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".nav.HighScoreFragment">

        <TextView
            android:id="@+id/high_score_top_title"
            style="@style/nav_fragment_text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/high_score_text"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/high_score_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/nav_fragment_text_style"
            android:text="@={model.profileName}"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/high_score_top_title"
            tools:text="@string/name" />

        <TextView
            android:id="@+id/high_score_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/nav_fragment_text_style"
            android:text="@={model.profileTitle}"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/high_score_name"
            tools:text="@string/title" />

        <TextView
            android:id="@+id/high_score_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/nav_fragment_text_style"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/high_score_title"
            tools:text="@string/category" />

        <TextView
            android:id="@+id/high_score_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/nav_fragment_text_style"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/high_score_category"
            tools:text="@string/high_score" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>